# bevy_mod_billboard

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/: FiraMono-LICENSE
examples/: depth.rs  lock_rotation.rs  lock_y.rs  memory_leak.rs  stress_test.rs  text.rs  texture.rs  transform_propagation.rs
src/: billboard_uniform.rs  lib.rs  pipeline.rs  plugin.rs  text.rs  texture.rs  utils.rs
src/shader/: billboard.wgsl
tests/: text_usage.rs
