[package]
name = "bevy_mod_billboard"
version = "0.6.0"
edition = "2021"
description = "Billboard text and texture support for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kulkalkul/bevy_mod_billboard.git"
homepage = "https://github.com/kulkalkul/bevy_mod_billboard.git"
documentation = "https://docs.rs/bevy_mod_billboard"
readme = "README.md"
keywords = [ "bevy", "gamedev", "graphics", "billboard", "3dtext" ]
categories = [ "rendering", "game-development" ]
authors = [ "Bora Ülker" ]
exclude = [ "images", "assets" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.11.0"
bitflags = "2.3"

[dependencies.bevy]
version = "0.13"
default_features = false
features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_text",
    "bevy_sprite",
    "bevy_winit",
    "x11",
    "wayland",
]

[dev-dependencies]
bevy = "0.13"
